# citemap

./: .gitignore  README.md
backend/: .env  algorithms.py  app.py  create_citation_graph.py  pyproject.toml  requirements.txt
backend/api/: app.py  citation_graph.pkl  index.py
data/: process_data.py
frontend/: .gitignore  README.md  astro.config.mjs  components.json  package-lock.json  package.json  settings.json  tsconfig.json
frontend/app/utils/: mockApi.ts
frontend/public/: jon100datajson.json
frontend/src/components/: NodeGraph.tsx  SearchInterface.tsx  SearchResults.tsx  SigmaNetwork.tsx  WeightSliders.jsx  WeightSliders.tsx
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/types/: jon100data.ts  paper.ts  weights.ts
frontend/src/utils/: mockapi.ts
