[tool.poetry]
name = "citemap-backend"
version = "0.1.0"
description = "backend for citemap"
authors = ["Steven Kotwal <steve@pnada.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
